修改网页标题和描述

--- a/Application/Home/View/Activity/base.html
+++ b/Application/Home/View/Activity/base.html
@@ -3,8 +3,10 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="UTF-8">
+        <meta name="keywords" content="58工长通丨武汉工长通丨装修平台找工长">
+        <meta name="description" content="58工长通丨武汉工长通丨装修平台找工长,电话：4001667566是一种有别于装修公司、马路游击队的全新互联网装修模式，省去所有中间环节（工程管理费、设计师费用、业务员费用、项目经理费、公司利润），工长直接提供免费上门量房、免费报价、免费设计效果图等服务，同时平台提供专业监理服务，保障工程质量；平台全程监督工程进展、投诉协调、售后服务等内容，从而避免纠纷发生，保障装修进展顺利！">
         <title>
-            58工长通-管家式装修服务平台
+            武汉工长装修­_五八工长通­__58工长专业装修平台
         </title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
