--- a/Application/Home/View/Activity/detail.html
+++ b/Application/Home/View/Activity/detail.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>
-        58工长通-管家式装修服务平台
+        武汉工长装修­_五八工长通­__58工长专业装修平台
     </title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <link rel="stylesheet" href="__PUBLIC__/Activity/css/base.css">
