修改链接地址

--- a/Application/Home/View/Activity/base.html
+++ b/Application/Home/View/Activity/base.html
@@ -25,9 +25,9 @@
         <section class="footer_minu">
             <ul class="clearfix">
                 <li class="fl minu_active">
-                    <a href="/gzt/index/index.html">
+                    <a href="/index/index.html">
                         <div>
-                            <i class="iconfont <eq name='current_menu' value='/gzt/index/index'>icon-tuijianhaoyou1<else />icon-tuijianhaoyou</eq>">
+                            <i class="iconfont <eq name='current_menu' value='/index/index'>icon-tuijianhaoyou1<else />icon-tuijianhaoyou</eq>">
                             </i>
                         </div>
                         <p>
@@ -36,9 +36,9 @@
                     </a>
                 </li>
                 <li class="fl">
-                    <a href="/gzt/index/rule.html">
+                    <a href="/index/rule.html">
                         <div>
-                            <i class="iconfont <eq name='current_menu' value='/gzt/index/rule'>icon-jiangliguize2<else />icon-jiangliguize</eq>">
+                            <i class="iconfont <eq name='current_menu' value='/index/rule'>icon-jiangliguize2<else />icon-jiangliguize</eq>">
                             </i>
                         </div>
                         <p>
@@ -47,9 +47,9 @@
                     </a>
                 </li>
                 <li class="fl footer_userhome">
-                    <a href="/gzt/index/login.html">
+                    <a href="/index/login.html">
                         <div>
-                            <i class="iconfont <eq name='current_menu' value='/gzt/index/userhome'>icon-wodezhanghu1<else />icon-wodezhanghu</eq>">
+                            <i class="iconfont <eq name='current_menu' value='/index/userhome'>icon-wodezhanghu1<else />icon-wodezhanghu</eq>">
                             </i>
                         </div>
                         <p>
@@ -58,9 +58,9 @@
                     </a>
                 </li>
                 <li class="fl">
-                    <a href="/gzt/index/service.html">
+                    <a href="/index/service.html">
                         <div>
-                            <i class="iconfont <eq name='current_menu' value='/gzt/index/service'>icon-lianxikefu1<else />icon-lianxikefu</eq>">
+                            <i class="iconfont <eq name='current_menu' value='/index/service'>icon-lianxikefu1<else />icon-lianxikefu</eq>">
                             </i>
                         </div>
                         <p>
