--- a/Application/Home/View/Activity/distill.html
+++ b/Application/Home/View/Activity/distill.html
@@ -28,13 +28,13 @@
 				</div>
 			</script>
 		</div>
-		<p class="history_link"><a href="/gzt/index/moneyrecord.html">提取历史&gt;&gt;</a></p>
+		<p class="history_link"><a href="/index/moneyrecord.html">提取历史&gt;&gt;</a></p>
 	</section>
 
     <section class="usable_sel">
 		<div class="usa_selbox" id="usa-selbox">
 			<script type="text/template" id="usa-selbox-template">
-				<a href="/gzt/index/selectcard.html" class="clearfix">
+				<a href="/index/selectcard.html" class="clearfix">
 					<%if(!dist_title.bank_number){%>
 					<p class="fl bankcard" status="1">请选择收款的储蓄卡</p>
 					<%}else{%>
