--- a/Application/Home/View/Activity/login.html
+++ b/Application/Home/View/Activity/login.html
@@ -44,7 +44,7 @@
         </div>
         <input name="" type="button" value="登录" class="btn opa7" id="loginBtn"
                disabled="">
-        <a href="/gzt/index/reg.html" target="_parent" class="go">
+        <a href="/index/reg.html" target="_parent" class="go">
             新用户注册 &gt;
         </a>
     </section>
