--- a/Application/Home/View/Activity/recommend.html
+++ b/Application/Home/View/Activity/recommend.html
@@ -19,7 +19,7 @@
                 <% for(var i=0; i<user_promote.length; i++){ %>
                 <% var item = user_promote[i] %>
                 <li class="promote_list clearfix">
-                    <a href="/gzt/index/detail.html?orderid=<%= item.orderid %>" class="clearfix">
+                    <a href="/index/detail.html?orderid=<%= item.orderid %>" class="clearfix">
                         <div class="fl prom_name">
                             <p class="color_333"><%= item.title %>
                                 <% if(item.area){ %>
