--- a/Application/Home/View/Activity/reg.html
+++ b/Application/Home/View/Activity/reg.html
@@ -29,10 +29,10 @@
 
         </div>
         <input name="" type="button" value="注册" class="btn opa7" id="regBtn" disabled="">
-        <a href="/gzt/index/login.html" target="_parent" class="go">账户登录 &gt;</a>
+        <a href="/index/login.html" target="_parent" class="go">账户登录 &gt;</a>
         <dl class="notice">
             <dt>注册即代表您同意</dt>
-            <dd><a href="/gzt/index/agreement.html" target="_parent">《推荐装修返现用户须知协议》</a></dd>
+            <dd><a href="/index/agreement.html" target="_parent">《推荐装修返现用户须知协议》</a></dd>
         </dl>
 
     </section>
