--- a/Application/Home/View/Activity/selectcard.html
+++ b/Application/Home/View/Activity/selectcard.html
@@ -22,7 +22,7 @@
             <section class="bg_fff">
                 <div class="cardWrap">
 
-                    <a href="/gzt/index/distill.html?bid=<%=item.id%>" class="cardMod fix">
+                    <a href="/index/distill.html?bid=<%=item.id%>" class="cardMod fix">
                         <p class="tit">
                             <span class="name"><%=item.name%></span>
                             <cite class="icon"><img src="" width="36" height="36"></cite>
