--- a/Application/Home/View/Activity/userhome.html
+++ b/Application/Home/View/Activity/userhome.html
@@ -20,7 +20,7 @@
             <div class="us_titlebg"></div>
             <div class="us_cont">
                 <div class="us_conttit clearfix">
-                    <a href="/gzt/index/personalinfo.html" class="clearfix">
+                    <a href="/index/personalinfo.html" class="clearfix">
                         <div class="us_titleft fl">
                             <div class="us_logo fl">
                                 <img src="<%= user_title.avatar %>">
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="us_button">
-                    <a href="/gzt/index/distill.html">提取</a>
+                    <a href="/index/distill.html">提取</a>
                 </div>
             </div>
         </script>
@@ -77,7 +77,7 @@
                 <% } %>
             </script>
         </ul>
-        <div class="promote_none">您还没有推荐，<a href="/gzt/index/index.html">现在就去推荐>></a></div>
+        <div class="promote_none">您还没有推荐，<a href="/index/index.html">现在就去推荐>></a></div>
     </section>
 
 </block>
