--- a/Application/Admin/View/Public/header.html
+++ b/Application/Admin/View/Public/header.html
@@ -27,7 +27,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{:U('index/index')}">管理后台</a>
+            <a class="navbar-brand" href="javascript:void(0);">58gzt管理后台</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
