--- a/Application/Admin/View/Public/sidebar.html
+++ b/Application/Admin/View/Public/sidebar.html
@@ -23,5 +23,5 @@
             <!--<li><a href="#">缓存管理</a></li>-->
         <!--</ul>-->
     <!--</li>-->
-    <li><a href="{:U('recommend/index')}"><i class="fa fa-dashboard"></i> 推荐列表</a></li>
+    <li><a href="{:U('recommend/index')}"><i class="fa fa-list"></i> 推荐列表</a></li>
 </ul>
