--- a/Application/Admin/View/Index/setting.html
+++ b/Application/Admin/View/Index/setting.html
@@ -20,7 +20,7 @@
 
 <script>
     $(function(){
-        $(".btn-success"]').click(function(){
+        $(".btn-success").click(function(){
         var pass1 = $.trim($('input[name="password_new1"]').val());
         var pass2 = $.trim($('input[name="password_new2"]').val());
             if(pass1 == '' || pass2 == ''){
