--- a/Application/Admin/View/Index/setting.html
+++ b/Application/Admin/View/Index/setting.html
@@ -27,7 +27,7 @@
               alert('密码不能为空');
 		    return false;
             }
-            if(pass1 == pass2){
+            if(pass1 != pass2){
               alert('两次密码输入不一致');
 		    return false;
             }
