新增打款操作

--- a/Application/Admin/View/Public/sidebar.html
+++ b/Application/Admin/View/Public/sidebar.html
@@ -24,4 +24,5 @@
         <!--</ul>-->
     <!--</li>-->
     <li><a href="{:U('recommend/index')}"><i class="fa fa-list"></i> 推荐列表</a></li>
+    <li><a href="{:U('money/index')}"><i class="fa fa-money"></i> 打款列表</a></li>
 </ul>
