新增状态搜索

--- a/Application/Admin/View/Money/index.html
+++ b/Application/Admin/View/Money/index.html
@@ -7,7 +7,7 @@
                     <select name="status">
                         <option value="-1">请选择</option>
                         <foreach name="status_text" item="st">
-                            <option value="{$key}">{st}</option>
+                            <option value="{$key}">{$st}</option>
                         </foreach>
                     </select>
                 </div>
