--- a/Application/Admin/View/Money/update.html
+++ b/Application/Admin/View/Money/update.html
@@ -1,50 +1,42 @@
-<include file="Public/header" title="编辑推荐信息" />
+<include file="Public/header" title="打款详情" />
 <div id="page-wrapper">
 <form action="{:U('recommend/update')}" method="post">
 	<div class="form-group">
-		<label>推荐姓名</label>
-		<input class="form-control" disabled type="text" name="r_username" value="{$model.r_username}">
+		<label>收款人手机号</label>
+		<input class="form-control" disabled type="text" name="r_username" value="{$user_info[$money_record['mr_u_uid']]}">
 	</div>
 	<div class="form-group">
-		<label>手机号</label>
-		<input class="form-control" disabled type="text" name="r_mobile" value="{$model.r_mobile}">
+		<label>打款金额</label>
+		<input class="form-control" disabled type="text" name="r_mobile" value="{$user_info.mr_money}">
 	</div>
-	<!--<div class="form-group">-->
-		<!--<label>性别</label>-->
-		<!--<input class="form-control" disabled type="text" name="r_sex" value="<if condition="$model.r_sex eq 1">男<else />女</if>">-->
-	<!--</div>-->
     <div class="form-group">
-        <label>地址</label>
-        <input class="form-control" disabled type="text" name="r_address" value="{$model.r_address}">
+        <label>银行名称</label>
+        <input class="form-control" disabled type="text" name="r_address" value="{$user_info.mr_bank_name}">
     </div>
 	<div class="form-group">
-		<label>小区</label>
-		<input class="form-control" disabled type="text" name="r_community" value="{$model.r_community}">
+		<label>银行卡号</label>
+		<input class="form-control" disabled type="text" name="r_community" value="{$user_info.mr_bank_number}">
 	</div>
     <div class="form-group">
-        <label>面积(㎡)</label>
-        <input class="form-control" disabled type="text" name="r_acreage" value="{$model.r_acreage}">
-    </div>
-    <div class="form-group">
-        <label>预算(w)</label>
-        <input class="form-control" disabled type="text" name="r_budget" value="{$model.r_budget}">
+        <label>支行名称</label>
+        <input class="form-control" disabled type="text" name="r_address" value="{$bank_info.b_bank_branch}">
     </div>
 	<div class="form-group">
         <label>状态</label>
         <volist name="status_text" id="vo">
             <label class="radio-inline">
-              <input type="radio" name="r_status" value="{$key}" <if condition="$model.r_status eq $key">checked="checked"</if>>{$vo}
+              <input type="radio" name="r_status" value="{$key}" <if condition="$user_info.r_status eq $key">checked="checked"</if>>{$vo}
             </label>
         </volist>
     </div>
     <div class="form-group" id="input_reason" style="<if condition='$model.r_status lt 3'>display:none;</if>">
-        <label>原因</label>
-        <input class="form-control" type="text" name="r_reason" value="{$model.r_reason}" placeholder="失败必须填写原因">
+        <label>驳回原因</label>
+        <input class="form-control" type="text" name="r_reason" value="{$user_info.r_reason}" placeholder="驳回必须填写原因">
     </div>
     <if condition="$model.r_status lt 3">
 	<div class="form-group">
 		<input type="hidden" name="id" value="{$model.r_id}">
-		<button class="btn btn-success" type="submit" >更新</button>
+		<button class="btn btn-success" type="submit" >确定</button>
 	</div>
     </if>
 
@@ -57,7 +49,7 @@
 <script>
     $(function(){
         $('input[type="radio"]').click(function(){
-            if ($(this).val() > 3) {
+            if ($(this).val() == 2) {
                 $('#input_reason').show();
             } else {
                 $('#input_reason').find('input').val('');
