--- a/Application/Admin/View/Money/update.html
+++ b/Application/Admin/View/Money/update.html
@@ -1,6 +1,6 @@
 <include file="Public/header" title="打款详情" />
 <div id="page-wrapper">
-<form action="{:U('recommend/update')}" method="post">
+<form action="{:U('money/update')}" method="post">
 	<div class="form-group">
 		<label>收款人手机号</label>
 		<input class="form-control" disabled type="text" name="r_username" value="{$user_info[$money_record['mr_u_uid']]}">
