跳转链接修改

--- a/Application/Admin/View/Money/index.html
+++ b/Application/Admin/View/Money/index.html
@@ -59,7 +59,7 @@
                     <if condition="$v['mr_status'] eq 0">
                         <a href="{:U('money/update', array('id'=>$v['mr_id']))}">打款</a>
                     <else />
-                        <a href="{:U('money/see', array('id'=>$v['mr_id']))}">查看</a>
+                        <a href="{:U('money/update', array('id'=>$v['mr_id']))}">查看</a>
                     </if>
             </tr>
         </foreach>
