--- a/Application/Home/View/Activity/agreement.html
+++ b/Application/Home/View/Activity/agreement.html
@@ -70,7 +70,7 @@
     <p>网络服务条款要与中华人民共和国的法律解释相一致，用户和推荐装修返现一致同意服从中国境内法院管辖。如发生推荐装修返现服务条款与中华人民共和国法律相抵触时，则这些条款将完全按法律规定重新解释，而其它条款则依旧保持对用户产生法律效力和影响。</p>
     <p>在任何情况下，推荐装修返现用户不得利用推荐装修返现进行违反或可能违反国家法律和法规的言论或行为，否则，推荐装修返现可在任何时候不经任何事先通知终止向用户提供服务。并且用户对自己的言论或行为负责。</p>
     <p class="tit">隐私政策</p>
-    <p>推荐装修返现本应用程序由北京优装网信息科技有限公司（以下简称“我们”）运营并由其关联公司提供各种支持。</p>
+    <p>推荐装修返现本应用程序由武汉五八工长通科技股份有限公司（以下简称“我们”）运营并由其关联公司提供各种支持。</p>
     <p>我们注重对您个人隐私的保护。有时候我们需要某些信息才能为您提供您请求的服务，本隐私声明解释了这些情况下的数据收集和使用情况。本隐私声明适用于本应用程序的所有相关服务。如果您访问本应用程序、使用本应用程序的任何服务，那么您便接受了本隐私声明。</p>
     <p class="tit">用户信息的获取</p>
     <p>我们获取用户信息的主要目的在于向您提供一个顺畅、高效的访问流程，并致力于不断完善和提升您的体验。</p>
