--- a/Application/Home/View/Activity/rule.html
+++ b/Application/Home/View/Activity/rule.html
@@ -13,7 +13,7 @@
 
     <!--promote start-->
     <section class="rule">
-        <img src="__PUBLIC__/Activity/img/rule.jpg">
+        <img src="__PUBLIC__/Activity/img/rule.jpg?v=20171020">
     </section>
 
 </block>
