新增注册密码

--- a/Application/Home/View/Activity/reg.html
+++ b/Application/Home/View/Activity/reg.html
@@ -16,6 +16,7 @@
 
     <section class="tMarA">
         <div class="item fix"><label>手机号</label><input name="" type="text" class="tel" id="tel"></div>
+        <div class="item fix"><label>密码</label><input name="" type="password" class="tel" id="pwd"></div>
         <div class="item fix">
             <label>验证码</label>
             <input name="send_type" value="1" type="hidden" id="send_type">
