新增登录密码

--- a/Application/Home/View/Activity/login.html
+++ b/Application/Home/View/Activity/login.html
@@ -25,23 +25,29 @@
         </div>
         <div class="item fix">
             <label>
-                验证码
+                密码
             </label>
-            <input name="" type="text" class="verific" id="msgWord">
-            <input name="send_type" value="2" type="hidden" id="send_type">
-            <p class="msgBtn" id="msgBtn">
-					<span class="txt">
-						发送验证码
-					</span>
-					<span class="time">
-						（
-						<i id="time">
-							60
-						</i>
-						s）
-					</span>
-            </p>
+            <input name="" type="password" class="tel" id="pwd">
         </div>
+        <!--<div class="item fix">-->
+            <!--<label>-->
+                <!--验证码-->
+            <!--</label>-->
+            <!--<input name="" type="text" class="verific" id="msgWord">-->
+            <!--<input name="send_type" value="2" type="hidden" id="send_type">-->
+            <!--<p class="msgBtn" id="msgBtn">-->
+					<!--<span class="txt">-->
+						<!--发送验证码-->
+					<!--</span>-->
+					<!--<span class="time">-->
+						<!--（-->
+						<!--<i id="time">-->
+							<!--60-->
+						<!--</i>-->
+						<!--s）-->
+					<!--</span>-->
+            <!--</p>-->
+        <!--</div>-->
         <input name="" type="button" value="登录" class="btn opa7" id="loginBtn"
                disabled="">
         <a href="/index/reg.html" target="_parent" class="go">
